# balanco_silvanateodoro

.github/workflows/: main.yml
silvanateodoro/: MONGODB_SETUP.md  package-lock.json  package.json  vite.config.ts
silvanateodoro/.github/workflows/: build-tauri-windows.yml
silvanateodoro/src/: App.tsx  main.tsx  theme.ts
silvanateodoro/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json  test_mongo.rs
silvanateodoro/src-tauri/src/: lib.rs  main.rs  test_connection.rs
silvanateodoro/src-tauri/src/connect/: mod.rs
silvanateodoro/src-tauri/src/models/: endereco.rs  fornecedor.rs  marca.rs  mod.rs  produto.rs  tag.rs  updatable.rs
silvanateodoro/src/components/: CreateEntityDialog.tsx  EditEntityDialog.tsx  Layout.tsx  MicrophoneInput.tsx  ProductForm.tsx
silvanateodoro/src/lib/: Confirm.tsx  Notifications.tsx  useStt.tsx
silvanateodoro/src/pages/: BrandsPage.tsx  ProductsPage.tsx  SuppliersPage.tsx  TagsPage.tsx
silvanateodoro/src/types/: entities.ts
