[package]
name = "silvanateodoro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "silvanateodoro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenv = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-stt = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv="0.15"
mongodb = "3.4.1"
tokio-stream = "0.1.17"
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1"

[features]
# no default features to keep native deps out of CI/dev by default
default = []
# enable STT (desktop + mobile) when explicitly requested
stt = ["tauri-plugin-stt"]
